# todo-web

./: .gitignore  Cargo.toml  Makefile.toml  README.md  localhost-key.pem  localhost.pem
client/: .eslintrc.json  .prettierrc.json  Cargo.toml  Makefile.toml  index.ejs  main.js  main.mjs  main.scss  package.json  postcss.config.js  postcss.config.mjs  rollup.config.mjs  webpack.config.js
client/src/: lib.rs  main.mjs  prelude.rs
client/stylesheets/: _variables.scss  main.scss
server/: Cargo.toml  sqlx-data.json
server/migrations/: 20200914003951_create_accounts.sql
server/src/: app.rs  assets.rs  extractors.rs  http.rs  logger.rs  main.rs  prelude.rs  state.rs
server/src/api/: mod.rs
server/src/configuration/: database.rs  mod.rs  socket.rs  tls.rs
server/src/net/: connection.rs  mod.rs  tcp.rs
server/src/net/tls/: mod.rs  pemfile.rs  server.rs
server/src/persistence/: mod.rs  prelude.rs
server/src/persistence/actors/: store.rs
server/src/persistence/models/: accounts.rs
server/src/routes/: files.rs  mod.rs  pages.rs
server/src/tls/: mod.rs  pemfile.rs
shared/: Cargo.toml
shared/src/: lib.rs  logger.rs  prelude.rs  views.rs
shared/src/logger/: mod.rs  native.rs  wasm.rs
shared/src/macros/: cfg.rs
shared/src/views/: layout.rs  layouts.rs  mod.rs  prelude.rs  render.rs  templates.rs
shared/templates/: layout.hbs  layout.html
shared/templates/layouts/: page.hbs  page.html  page.jinja
src/: main.rs  prelude.rs
src/tls/: mod.rs  pemfile.rs
