[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "todo-web"
version = "0.1.0"

[workspace]
members = ["./shared", "./client"]

[dependencies]
actix-files = "0.3.0-beta.1"
color-eyre  = "0.5"
listenfd    = "0.3"
rustls      = "0.18.1"
serde_json  = "1.0.57"

    [dependencies.actix-web]
    features = ["rustls"]
    version  = "3.0.0-beta.3"

    [dependencies.serde]
    features = ["derive"]
    version  = "1.0.115"
