[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "todo-web-client"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys                   = "0.3.44"
serde_json               = "1.0.57"
wasm-bindgen-futures     = "0.4.17"
wee_alloc                = "0.4.5"

    [dependencies.serde]
    features = ["derive"]
    version  = "1.0.115"

    [dependencies.todo-web-shared]
    path = "../shared"

    [dependencies.wasm-bindgen]
    features = ["serde-serialize", "enable-interning", "nightly"]
    version  = "0.2.67"

    [dependencies.web-sys]
    features = ["Document", "Element", "HtmlElement", "Node", "Window", "Text"]
    version  = "0.3.44"
