[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "todo-web-client"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys               = "0.3.45"
wasm-bindgen-futures = "0.4.18"
wee_alloc            = "0.4.5"

    [dependencies.todo-web-shared]
    features = ["wasm-bindgen"]
    path     = "../shared"

    [dependencies.wasm-bindgen]
    features = ["serde-serialize", "enable-interning", "nightly"]
    version  = "0.2.68"

    [dependencies.web-sys]
    features = ["Document", "Element", "HtmlElement", "Node", "Window", "Text"]
    version  = "0.3.45"
