[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "todo-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt   = "1.1.1"
base64     = "0.12.3"
dotenv     = "0.15.0"
listenfd   = "0.3"
mime_guess = "2.0.3"
rustls     = "0.18.1"
serde_json = "1.0.57"

    [dependencies.actix-web]
    features = ["rustls"]
    version  = "3.0.1"

    [dependencies.async-std]
    features = ["unstable"]
    version  = "1.6.3"

    [dependencies.clap]
    features = ["unstable", "wrap_help"]
    version  = "3.0.0-beta.1"

    [dependencies.serde]
    features = ["derive", "alloc"]
    version  = "1.0.116"

    [dependencies.sqlx]
    default-features = false
    features         = [
        "macros",
        "migrate",
        "postgres",
        "chrono",
        "uuid",
        "runtime-actix",
        "offline",
    ]
    version          = "0.4.0-beta.1"

    [dependencies.todo-web-shared]
    features = ["actix"]
    path     = "../shared"
