[package]
authors     = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
description = "An overengineered TODO list experiment in rust."
edition     = "2018"
name        = "todo-web"
version     = "0.1.0"

[dependencies]
async-tls   = "0.10.0"
base64      = "0.12.3"
dotenv      = "0.15.0"
listenfd    = "0.3"
mime_guess  = "2.0.3"
pin-project = "0.4.23"
rustls      = "0.18.1"
serde_json  = "1.0.57"

    [dependencies.async-std]
    features = ["attributes", "unstable"]
    version  = "1.6.4"

    [dependencies.clap]
    features = ["unstable", "wrap_help"]
    version  = "3.0.0-beta.2"

    [dependencies.serde]
    features = ["derive", "alloc"]
    version  = "1.0.116"

    [dependencies.sqlx]
    features = ["postgres", "chrono", "uuid", "json", "offline"]
    version  = "0.4.0-beta.1"

    [dependencies.todo-web-shared]
    features = ["server"]
    path     = "../shared"
