[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "todo-web-shared"
version = "0.1.0"

[features]
actix        = ["askama/with-actix-web", "actix-web", "askama_actix"]
wasm-bindgen = [
    "console_error_panic_hook",
    "tracing-wasm",
    "chrono/wasmbind",
    "uuid/wasm-bindgen",
]

[dependencies]
color-eyre         = "0.5"
serde_json         = "1.0.57"
tracing            = "0.1.19"
tracing-error      = "0.1.2"
tracing-futures    = "0.2.4"
tracing-subscriber = "0.2.11"

    [dependencies.actix-web]
    optional = true
    version  = "2.0.0"

    [dependencies.console_error_panic_hook]
    optional = true
    version  = "0.1.6"

    [dependencies.chrono]
    features = ["serde"]
    version  = "0.4.15"

    [dependencies.askama]
    features = ["serde-json"]
    version  = "0.10.3"

    [dependencies.askama_actix]
    optional = true
    version  = "0.10.0"

    [dependencies.serde]
    features = ["derive"]
    version  = "1.0.115"

    [dependencies.tracing-wasm]
    optional = true
    version  = "0.1.0"

    [dependencies.uuid]
    features = ["v4", "serde"]
    version  = "0.8"
