[package]
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"
name    = "todo-web-shared"
version = "0.1.0"

[features]
server       = ["tracing-appender"]
wasm-bindgen = [
    "console_error_panic_hook",
    "tracing-wasm",
    "chrono/wasmbind",
    "uuid/wasm-bindgen",
]

[dependencies]
bytes              = "0.5.6"
color-eyre         = "0.5"
once_cell          = "1.4.1"
serde_derive       = "1.0.116"
serde_json         = "1.0.57"
tracing            = "0.1.19"
tracing-error      = "0.1.2"
tracing-subscriber = "0.2.12"

    [dependencies.askama]
    features = ["serde-json"]
    version  = "0.10.3"

    [dependencies.console_error_panic_hook]
    optional = true
    version  = "0.1.6"

    [dependencies.chrono]
    features = ["serde"]
    version  = "0.4.15"

    [dependencies.derive_more]
    features = ["nightly"]
    version  = "0.99.10"

    [dependencies.futures]
    features = ["unstable"]
    version  = "0.3.5"

    [dependencies.parking_lot]
    features = ["nightly"]
    version  = "0.11"

    [dependencies.rust-embed]
    features = ["debug-embed", "compression"]
    version  = "5.6.0"

    [dependencies.serde]
    features = ["derive", "alloc"]
    version  = "1.0.116"

    [dependencies.tracing-appender]
    optional = true
    version  = "0.1.1"

    [dependencies.tracing-futures]
    features = ["futures-03"]
    version  = "0.2.4"

    [dependencies.tracing-wasm]
    optional = true
    version  = "0.1.0"

    [dependencies.uuid]
    features = ["v4", "serde"]
    version  = "0.8"
